--- a/App/dnet-out/cfg/resnet18.cfg
+++ b/App/dnet-out/cfg/resnet18.cfg
@@ -1,21 +1,25 @@
 [net]
-# Train
-batch=128
-subdivisions=1
-# Test
-# batch=1
+# Training
+# batch=128
 # subdivisions=1
-height=224
-width=224
-channels=3
-momentum=0.9
-decay=0.0005
-max_crop=320
 
+# Testing
+batch=1
+subdivisions=1
+
+height=256
+width=256
+channels=3
+min_crop=128
+max_crop=448
+
+burn_in=1000
 learning_rate=0.1
 policy=poly
 power=4
-max_batches=1600000
+max_batches=800000
+momentum=0.9
+decay=0.0005
 
 angle=7
 hue=.1
@@ -23,11 +27,12 @@ saturation=.75
 exposure=.75
 aspect=.75
 
+
 [convolutional]
 batch_normalize=1
-filters=16
-size=3
-stride=1
+filters=64
+size=7
+stride=2
 pad=1
 activation=leaky
 
@@ -35,26 +40,71 @@ activation=leaky
 size=2
 stride=2
 
+
+# Residual Block
 [convolutional]
 batch_normalize=1
-filters=32
+filters=64
 size=3
 stride=1
 pad=1
 activation=leaky
 
-[maxpool]
-size=2
-stride=2
-
 [convolutional]
 batch_normalize=1
-filters=16
-size=1
+filters=64
+size=3
+stride=1
+pad=1
+activation=linear
+
+[shortcut]
+activation=leaky
+from=-3
+
+# Residual Block
+[convolutional]
+batch_normalize=1
+filters=64
+size=3
 stride=1
 pad=1
 activation=leaky
 
+[convolutional]
+batch_normalize=1
+filters=64
+size=3
+stride=1
+pad=1
+activation=linear
+
+[shortcut]
+activation=leaky
+from=-3
+
+# Strided Residual Block
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=2
+pad=1
+activation=leaky
+
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=1
+pad=1
+activation=linear
+
+[shortcut]
+activation=leaky
+from=-3
+
+# Residual Block
 [convolutional]
 batch_normalize=1
 filters=128
@@ -65,32 +115,39 @@ activation=leaky
 
 [convolutional]
 batch_normalize=1
-filters=16
-size=1
-stride=1
-pad=1
-activation=leaky
-
-[convolutional]
-batch_normalize=1
 filters=128
 size=3
 stride=1
 pad=1
+activation=linear
+
+[shortcut]
 activation=leaky
+from=-3
 
-[maxpool]
-size=2
-stride=2
 
+# Strided Residual Block
 [convolutional]
 batch_normalize=1
-filters=32
-size=1
-stride=1
+filters=256
+size=3
+stride=2
 pad=1
 activation=leaky
 
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=linear
+
+[shortcut]
+activation=leaky
+from=-3
+
+# Residual Block
 [convolutional]
 batch_normalize=1
 filters=256
@@ -101,32 +158,39 @@ activation=leaky
 
 [convolutional]
 batch_normalize=1
-filters=32
-size=1
-stride=1
-pad=1
-activation=leaky
-
-[convolutional]
-batch_normalize=1
 filters=256
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=linear
 
-[maxpool]
-size=2
+[shortcut]
+activation=leaky
+from=-3
+
+
+# Strided Residual Block
+[convolutional]
+batch_normalize=1
+filters=512
+size=3
 stride=2
-
-[convolutional]
-batch_normalize=1
-filters=64
-size=1
-stride=1
 pad=1
 activation=leaky
 
+[convolutional]
+batch_normalize=1
+filters=512
+size=3
+stride=1
+pad=1
+activation=linear
+
+[shortcut]
+activation=leaky
+from=-3
+
+# Residual Block
 [convolutional]
 batch_normalize=1
 filters=512
@@ -137,27 +201,20 @@ activation=leaky
 
 [convolutional]
 batch_normalize=1
-filters=64
-size=1
-stride=1
-pad=1
-activation=leaky
-
-[convolutional]
-batch_normalize=1
 filters=512
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=linear
 
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
+[shortcut]
 activation=leaky
+from=-3
+
+
+
+
+[avgpool]
 
 [convolutional]
 filters=1000
@@ -165,8 +222,6 @@ size=1
 stride=1
 pad=1
 activation=linear
-
-[avgpool]
 
 [softmax]
 groups=1
