--- a/App/dnet-out/cfg/darknet19.cfg
+++ b/App/dnet-out/cfg/darknet19.cfg
@@ -1,25 +1,25 @@
 [net]
 # Training
-# batch=128
-# subdivisions=1
+#batch=128
+#subdivisions=2
 
 # Testing
-batch=3
-subdivisions=1
+ batch=128
+ subdivisions=1
 
 height=256
 width=256
-channels=3
 min_crop=128
 max_crop=448
+channels=3
+momentum=0.9
+decay=0.0005
 
 burn_in=1000
 learning_rate=0.1
 policy=poly
 power=4
 max_batches=800000
-momentum=0.9
-decay=0.0005
 
 angle=7
 hue=.1
@@ -27,12 +27,11 @@ saturation=.75
 exposure=.75
 aspect=.75
 
-
 [convolutional]
 batch_normalize=1
-filters=64
-size=7
-stride=2
+filters=32
+size=3
+stride=1
 pad=1
 activation=leaky
 
@@ -40,8 +39,6 @@ activation=leaky
 size=2
 stride=2
 
-
-# Residual Block
 [convolutional]
 batch_normalize=1
 filters=64
@@ -50,47 +47,9 @@ stride=1
 pad=1
 activation=leaky
 
-[convolutional]
-batch_normalize=1
-filters=64
-size=3
-stride=1
-pad=1
-activation=linear
-
-[shortcut]
-activation=leaky
-from=-3
-
-# Residual Block
-[convolutional]
-batch_normalize=1
-filters=64
-size=3
-stride=1
-pad=1
-activation=leaky
-
-[convolutional]
-batch_normalize=1
-filters=64
-size=3
-stride=1
-pad=1
-activation=linear
-
-[shortcut]
-activation=leaky
-from=-3
-
-# Strided Residual Block
-[convolutional]
-batch_normalize=1
-filters=128
-size=3
+[maxpool]
+size=2
 stride=2
-pad=1
-activation=leaky
 
 [convolutional]
 batch_normalize=1
@@ -98,17 +57,12 @@ filters=128
 size=3
 stride=1
 pad=1
-activation=linear
-
-[shortcut]
 activation=leaky
-from=-3
 
-# Residual Block
 [convolutional]
 batch_normalize=1
-filters=128
-size=3
+filters=64
+size=1
 stride=1
 pad=1
 activation=leaky
@@ -119,21 +73,11 @@ filters=128
 size=3
 stride=1
 pad=1
-activation=linear
-
-[shortcut]
 activation=leaky
-from=-3
 
-
-# Strided Residual Block
-[convolutional]
-batch_normalize=1
-filters=256
-size=3
+[maxpool]
+size=2
 stride=2
-pad=1
-activation=leaky
 
 [convolutional]
 batch_normalize=1
@@ -141,17 +85,12 @@ filters=256
 size=3
 stride=1
 pad=1
-activation=linear
-
-[shortcut]
 activation=leaky
-from=-3
 
-# Residual Block
 [convolutional]
 batch_normalize=1
-filters=256
-size=3
+filters=128
+size=1
 stride=1
 pad=1
 activation=leaky
@@ -162,35 +101,12 @@ filters=256
 size=3
 stride=1
 pad=1
-activation=linear
-
-[shortcut]
 activation=leaky
-from=-3
 
-
-# Strided Residual Block
-[convolutional]
-batch_normalize=1
-filters=512
-size=3
+[maxpool]
+size=2
 stride=2
-pad=1
-activation=leaky
 
-[convolutional]
-batch_normalize=1
-filters=512
-size=3
-stride=1
-pad=1
-activation=linear
-
-[shortcut]
-activation=leaky
-from=-3
-
-# Residual Block
 [convolutional]
 batch_normalize=1
 filters=512
@@ -201,20 +117,79 @@ activation=leaky
 
 [convolutional]
 batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=leaky
+
+[convolutional]
+batch_normalize=1
 filters=512
 size=3
 stride=1
 pad=1
-activation=linear
-
-[shortcut]
 activation=leaky
-from=-3
 
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=leaky
 
+[convolutional]
+batch_normalize=1
+filters=512
+size=3
+stride=1
+pad=1
+activation=leaky
 
+[maxpool]
+size=2
+stride=2
 
-[avgpool]
+[convolutional]
+batch_normalize=1
+filters=1024
+size=3
+stride=1
+pad=1
+activation=leaky
+
+[convolutional]
+batch_normalize=1
+filters=512
+size=1
+stride=1
+pad=1
+activation=leaky
+
+[convolutional]
+batch_normalize=1
+filters=1024
+size=3
+stride=1
+pad=1
+activation=leaky
+
+[convolutional]
+batch_normalize=1
+filters=512
+size=1
+stride=1
+pad=1
+activation=leaky
+
+[convolutional]
+batch_normalize=1
+filters=1024
+size=3
+stride=1
+pad=1
+activation=leaky
 
 [convolutional]
 filters=1000
@@ -222,6 +197,8 @@ size=1
 stride=1
 pad=1
 activation=linear
+
+[avgpool]
 
 [softmax]
 groups=1
